--- a/front/src/components/Login/Login.css
+++ b/front/src/components/Login/Login.css
@@ -52,7 +52,7 @@
 .container button{
     width: 100%;
     height: 50px;
-    backgraound-color: #fff;
+    background-color: #fff;
     border: none;
     outline: none;
     border-radius: 40px;
